# LJ2_P4_ROS_Groep1

./: HMI_INFO.txt  Manipulation_INFO.txt
INFO/: Opstarten_Robot.txt
universal_robots_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
universal_robots_ws/logs/controller_stopper/: build.symlink.241.log.stderr
universal_robots_ws/logs/image_processor/: build.make.002.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.010.log.stderr  build.make.012.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.028.log.stderr  build.make.032.log.stderr  build.make.034.log.stderr  build.make.037.log.stderr  build.make.043.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr  (+192 more)
universal_robots_ws/src/my_universal_robots/image_processor/image_processor/: CMakeLists.txt
universal_robots_ws/src/my_universal_robots/image_processor/image_processor/config/: image_processor.rviz
universal_robots_ws/src/my_universal_robots/image_processor/image_processor/include/image_processor/: color_detector.h  image_processor.h  image_processor_node.h
universal_robots_ws/src/my_universal_robots/image_processor/image_processor/launch/: image_processor.launch
universal_robots_ws/src/my_universal_robots/image_processor/image_processor/src/: color_detector.cpp  image_processor.cpp  image_processor_node.cpp
(+1438 files in other folders)
